--- a/Commande/src/BO/Voiture.cls
+++ b/Commande/src/BO/Voiture.cls
@@ -20,11 +20,33 @@ Method creerVoiture(pRequest As msg.creerVoitureDmde, Output pResponse As msg.cr
     Quit $$$OK
 }
 
+Method supprimerVoiture(pRequest As msg.supprimerVoitureDmde, Output pResponse As msg.supprimerVoitureRpse) As %Status
+{
+    set pResponse = ##class(msg.supprimerVoitureRpse).%New()
+    if (##class(data.Voiture).consulterParPlaqueExists(pRequest.plaque,.idVoiture)){
+        set status = ##class(data.Voiture).%DeleteId(idVoiture)
+        if 'status{
+            set pResponse.codeRetour = "KO"
+            set pResponse.libErreur = "Erreur technique lors de la suppression"
+            Quit $$$OK
+        }
+    }else {
+        set pResponse.codeRetour = "KO"
+        set pResponse.libErreur = "Voiture inexistante"
+
+    }
+    set pResponse.codeRetour = "OK"
+    Quit $$$OK
+}
+
 XData MessageMap
 {
 <MapItems>
     <MapItem MessageType="msg.creerVoitureDmde">
         <Method>creerVoiture</Method>
+    </MapItem>
+    <MapItem MessageType="msg.supprimerVoitureDmde">
+        <Method>supprimerVoiture</Method>
     </MapItem>
 </MapItems>
 }
